Написал модульные тесты [bk-9]